# Machine-Learning

./: .gitignore  README.md  pyproject.toml
.cursor/skills/jj-ship/: SKILL.md
scripts/: scaffold_topics.py  topic_manifest.json
topics/: README.md
topics/advanced/cv/: README.md
topics/advanced/cv_and_gnn/: README.md
topics/advanced/gnn/: README.md  main.py
topics/advanced/gnn/src/: config.py  data.py  model.py  paths.py  setup.py  train.py  util.py
topics/advanced/gnn/tests/: test_model.py
topics/advanced/multimodal/: README.md
topics/advanced/nlp/: README.md
topics/advanced/special_topics/: README.md
topics/deep_learning/mlp_and_optimization/: README.md
topics/deep_learning/sequences/: README.md
topics/deep_learning/vision_basics/: README.md
topics/math_theory/: README.md
topics/mlops/experiment_and_deploy/: README.md
topics/mlops/web_and_demo/: README.md
topics/traditional_ml/classification/: README.md
topics/traditional_ml/ensemble/: README.md
topics/traditional_ml/evaluation/: README.md
topics/traditional_ml/regression/: README.md
topics/traditional_ml/unsupervised/: README.md
topics/traditional_ml/unsupervised/data/: README.md
